# langgraph-cookbook

./: .env.example  .gitignore  1st_class.ipynb  README.md  agentic_rag.ipynb  main.py  pyproject.toml
Agentic_Design_Patterns/: 00_workflows_vs_agents.ipynb  01_prompt_chaining.ipynb  02_parallelization.ipynb  03_routing.ipynb  04_orchestrator_worker.ipynb  05_evaluator_optimizer.ipynb  06_agent.ipynb  README.md
images/: agent.avif  agent_workflow.avif  augmented_llm.avif  prompt_chain.avif  worker.avif
