[project]
name = "langgraph-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.2",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.1.8",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.12.0",
    "tavily-python>=0.7.23",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
